--- a/Lesson38_39/1stPart_Code/Slide104.html
+++ b/Lesson38_39/1stPart_Code/Slide104.html
@@ -12,6 +12,7 @@ function myFunction() {
     w.document.open();
     w.document.write("<h2>Hello World!</h2>");
     w.document.close();
+    w.close();
 }
 </script>
 
