--- a/Lesson38_39/1stPart_Code/Slide68.html
+++ b/Lesson38_39/1stPart_Code/Slide68.html
@@ -15,13 +15,13 @@ document.getElementById("myP").addEventListener("click", function() {
     alert("You clicked the P element!");
 }, false);
 document.getElementById("myDiv").addEventListener("click", function() {
-    alert("You clicked the DIV element - Bubbling!");
+    alert("You clicked the DIV element! - B");
 }, false);
 document.getElementById("myP2").addEventListener("click", function() {
     alert("You clicked the P element!");
 }, true);
 document.getElementById("myDiv2").addEventListener("click", function() {
-    alert("You clicked the DIV element! - Capturing");
+    alert("You clicked the DIV element! - C");
 }, true);
 </script>
 </body>
